wp-eternal-theme/style.css
/*
Theme Name: WP Eternal Theme
Theme URI: https://github.com/One-World-By-Night/wp-eternal-theme
Description: A standalone WordPress theme built for Elementor with WP Dark Mode support. Designed for the One World by Night community.
Author: One World By Night
Author URI: https://owbn.net
Version: 2.0.0
Requires at least: 6.0
Tested up to: 6.8
Requires PHP: 7.4
License: GPL-2.0-or-later
Text Domain: wp-eternal-theme
*/

/**********Common style start*********/

body {
    font-family: "Roboto", sans-serif;
}

h2.elementor-heading-title {
    font-size: clamp(26px, 3vw, 50px) !important;
    font-weight: 600;
}
.heading-h1 h1 {
    font-size: clamp(30px, 5vw, 70px) !important;
}
.hero--banner {
    margin-top: -130px !important;
}

.elementor-widget-icon-list .elementor-icon-list-icon svg {
    fill: var(--e-global-color-42f8237) !important;
}

 .elementor-icon-box-icon .elementor-icon svg, .elementor-icon-wrapper .elementor-icon svg {
    fill: var(--e-global-color-42f8237) !important;
}
.elementor-widget-button .elementor-button {
	background-color: var(--e-global-color-e21451c) !important;
}
.elementor-widget-button .elementor-button:hover {
	background-color: transparent !important;
}

html.wp-dark-mode-active:not([data-wp-dark-mode-preset="0"]) body .elementor-widget-icon-list .elementor-icon-list-icon svg,
html[data-wp-dark-mode-active]:not([data-wp-dark-mode-preset="0"]) body .elementor-widget-icon-list .elementor-icon-list-icon svg {
	fill: var(--e-global-color-bcd8248) !important;
}

html.wp-dark-mode-active:not([data-wp-dark-mode-preset="0"]) body .elementor-icon-box-icon .elementor-icon svg,
html.wp-dark-mode-active:not([data-wp-dark-mode-preset="0"]) body .elementor-icon-wrapper .elementor-icon svg,
html[data-wp-dark-mode-active]:not([data-wp-dark-mode-preset="0"]) body .elementor-icon-box-icon .elementor-icon svg,
html[data-wp-dark-mode-active]:not([data-wp-dark-mode-preset="0"]) body .elementor-icon-wrapper .elementor-icon svg {
	fill: var(--e-global-color-bcd8248) !important;
}
.main--header ul.sub-menu li > a {
    margin: 0px !important;
    border: 0px;
}
.main--header ul.elementor-nav-menu--dropdown a, ul.elementor-nav-menu--dropdown a:focus, ul.elementor-nav-menu--dropdown a:hover {
    border-inline-start: 0px solid transparent !important;
}
/**********Common style end**********/

.banner--heading span.elementor-heading-title {
    font-size: clamp(30px, 5vw, 70px) !important;
}
.heading-h1 h1 em {
    font-weight: 700 !important;
    font-family: "Noto Serif" !important;
    font-size: clamp(30px, 6vw, 87px) !important;
}
.main--header {
    position: fixed !important;
    left: 0;
    top: 0;
    width: 100%;
    z-index: 99;
    transition: all 0.6s !important;
}
/* Offset header for WP admin bar when logged in */
.admin-bar .main--header {
    top: 32px;
}
@media screen and (max-width: 782px) {
    .admin-bar .main--header {
        top: 46px;
    }
}
.res--btn a.elementor-button {
    width: 100% !important;
}
.staff--btn .elementor-button-icon {
    display: none;
}
.img--boxes .elementor-container {
    gap: 20px !important;
}
.img--boxes .elementor-container > div {
    background: var(--wp-eternal-card-bg);
    border: 1px solid var(--wp-eternal-card-border);
    border-radius: 8px;
}
.img--boxes h3.elementor-heading-title {
    font-size: clamp(22px, 3vw, 25px) !important;
    font-weight: 600;
}
.home--blogs .uael-post__inner-wrap {
    display: flex;
    flex-direction: row;
    gap: 30px;
	height: 332px;
}
.home--blogs .uael-post__bg-wrap {
	background-color: transparent !important;
}
.home--blogs .uael-post__thumbnail img {
    border-radius: 8px;
    width: 100%;
    max-width: 156px;
    height: 114px;
    object-fit: cover;
}

.home--blogs .uael-post__inner-wrap > div {
    width: 100%;
}
.home--blogs h3.uael-post__title {
    position: absolute;
    left: 0px;
    bottom: 0px;
    width: 175px;
	word-wrap: break-word;
}
.home--blogs .uael-post-wrapper {
    padding: 20px 40px 20px 20px !important;
    margin: 0px !important;
    background: var(--wp-eternal-card-bg);
    border: 1px solid var(--wp-eternal-card-border);
    border-radius: 8px;
}

.home--blogs .slick-track {
    gap: 20px !important;
    display: flex;
}
.home--blogs .uael-post__excerpt {
    margin-bottom: 0px !important;
}
.home--blogs .uael-post__thumbnail {
    margin-bottom: 100px;
}
.home--blogs .uael-post-wrapper {
    position: relative;
}
.home--blogs .uael-post__content-wrap {
    display: -webkit-box !important;
    -webkit-line-clamp: 13 !important;
    -webkit-box-orient: vertical !important;
    overflow: hidden !important;
}
.home--blogs .slick-next i {
    transform: rotate(180deg);
}
.main--header.active section > .elementor-container {
    align-items: center;
}
.home--blogs button.slick-prev.slick-arrow {
  content: "";
    /* top: 0; */
    background: url(assets/images/arrow-shapecopy.png);
    width: 100px;
    height: 195px;
    background-repeat: no-repeat;
    background-size: contain;
    border-radius: 0px !important;
    left: 20px !important;
}
.home--blogs button.slick-next.slick-arrow {
    content: "";
    /* top: 0; */
    background: url(assets/images/arrow-shapecopy.png);
    width: 65px;
    height: 181px;
    background-repeat: no-repeat;
    background-size: contain;
    border-radius: 0px !important;
    right: 11px !important;
    transform: rotateY(180deg);
    top: 25%;
}
.home--blogs button.slick-prev.slick-arrow:after {
    content: "";
    top: 50%;
    left: 5px;
    background: url(assets/images/left-arrow-svgrepo-com.svg);
    position: absolute;
    width: 15px;
    height: 15px;
    background-size: 100%;
    background-repeat: no-repeat;
    filter: invert(1) brightness(5);
    background-color: var(--e-global-color-42f8237);
}
/* ... */

